# highway_fastapi

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: cctv.py  detection.py  health.py  traffic.py
app/core/: config.py  exceptions.py  session.py
app/crud/: base.py  crud_cctv.py  crud_detection.py  crud_traffic.py
app/models/: __init__.py  cctv.py  detection.py  traffic.py
app/schemas/: cctv.py  common.py  detection.py  traffic.py
app/services/: cctv_service.py  detection_service.py  traffic_service.py
migrations/: env.py  script.py.mako
migrations/versions/: 975b5e0ef425_init_tables.py
