[project]
name = "highway-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.1.2",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.1.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.32",
]

[dependency-groups]
dev = [
    "uvicorn>=0.40.0",
]
